Feat - set up the user app

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@
 ENVIRONTMENT=dev
 
 DB_URI=postgresql://postgres.nltivewoniysblewxmej:postgres@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
+
+JWT_SECRET=testingkey
