Feat - Read, Update, Delete product

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ ENVIRONTMENT=dev
 DB_URI=postgresql://postgres.nltivewoniysblewxmej:postgres@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
 
 JWT_SECRET=testingkey
+
+STORAGE_SERVICE_URL=http://localhost:3000/storage
